--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,9 @@
   </div>
 </mat-grid-list>
 
-  <button class="button" (click)="rollDice">roll dice </button>
+  <button class="button" (click)="rollDice()">roll dice </button>
+  <p>{{numberRolled}}</p>
+  <p>{{restart}}</p>
 
 
 
