--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,18 @@
   <p>{{numberRolled}}</p>
   <p>{{restart}}</p>
 
+  <div fxLayout="column"  >
+    <p fxLayoutAlign="space-around center">hello 1</p>
+    
+    <p fxLayoutAlign="space-around center">hello 2</p>
+   
+    <div>
+      <div fxLayout="row" >
+        <p >hello 3</p>
+        <p>hello 4</p>
+      </div>
+  </div>
 
+  </div>
 
 
